src/logo/parser/LogoParser.java
// $ANTLR 3.4 /home/carlos/Proyectos/logojava/Logo.g 2012-11-18 18:28:14

package logo.parser;

import logo.expressions.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class LogoParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "CLOSE_BR", "CLOSE_PAR", "COLON", "COMMA", "DIV", "DQUOTE", "END", "EOL", "EQ", "FLOAT", "GE", "GT", "ID", "IF", "INT", "LE", "LT", "MAKE", "MINUS", "MULT", "NE", "OPEN_BR", "OPEN_PAR", "OR", "PLUS", "REPEAT", "SEMICOLON", "STRING", "TO", "WS", "XOR", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int AND=4;
    public static final int CLOSE_BR=5;
    public static final int CLOSE_PAR=6;
    public static final int COLON=7;
    public static final int COMMA=8;
    public static final int DIV=9;
    public static final int DQUOTE=10;
    public static final int END=11;
    public static final int EOL=12;
    public static final int EQ=13;
    public static final int FLOAT=14;
    public static final int GE=15;
    public static final int GT=16;
    public static final int ID=17;
    public static final int IF=18;
    public static final int INT=19;
    public static final int LE=20;
    public static final int LT=21;
    public static final int MAKE=22;
    public static final int MINUS=23;
    public static final int MULT=24;
    public static final int NE=25;
    public static final int OPEN_BR=26;
    public static final int OPEN_PAR=27;
    public static final int OR=28;
    public static final int PLUS=29;
    public static final int REPEAT=30;
    public static final int SEMICOLON=31;
    public static final int STRING=32;
    public static final int TO=33;
    public static final int WS=34;
    public static final int XOR=35;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public LogoParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public LogoParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return LogoParser.tokenNames; }
    public String getGrammarFileName() { return "/home/carlos/Proyectos/logojava/Logo.g"; }


    	logo.ui.Context context;
    	IterationHandler handler = new IterationHandler();
    	public void setContext(logo.ui.Context context){
    		this.context = context;
    	}


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // /home/carlos/Proyectos/logojava/Logo.g:28:1: program : ( function | statement )+ ;
    public final LogoParser.program_return program() throws RecognitionException {
        LogoParser.program_return retval = new LogoParser.program_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        LogoParser.function_return function1 =null;

        LogoParser.statement_return statement2 =null;



        try {
            // /home/carlos/Proyectos/logojava/Logo.g:28:9: ( ( function | statement )+ )
            // /home/carlos/Proyectos/logojava/Logo.g:28:11: ( function | statement )+
            {
            root_0 = (Object)adaptor.nil();


            // /home/carlos/Proyectos/logojava/Logo.g:28:11: ( function | statement )+
            int cnt1=0;
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==TO) ) {
                    alt1=1;
                }
                else if ( ((LA1_0 >= ID && LA1_0 <= IF)||LA1_0==MAKE||LA1_0==REPEAT) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/carlos/Proyectos/logojava/Logo.g:28:12: function
            	    {
            	    pushFollow(FOLLOW_function_in_program49);
            	    function1=function();

            	    state._fsp--;

            	    adaptor.addChild(root_0, function1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /home/carlos/Proyectos/logojava/Logo.g:28:21: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program51);
            	    statement2=statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, statement2.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class function_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "function"
    // /home/carlos/Proyectos/logojava/Logo.g:30:1: function : TO f= ID (v= varref )* EOL ( singleLine )+ END ( EOL )? ;
    public final LogoParser.function_return function() throws RecognitionException {
        LogoParser.function_return retval = new LogoParser.function_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token f=null;
        Token TO3=null;
        Token EOL4=null;
        Token END6=null;
        Token EOL7=null;
        LogoParser.varref_return v =null;

        LogoParser.singleLine_return singleLine5 =null;


        Object f_tree=null;
        Object TO3_tree=null;
        Object EOL4_tree=null;
        Object END6_tree=null;
        Object EOL7_tree=null;

        try {
            // /home/carlos/Proyectos/logojava/Logo.g:31:2: ( TO f= ID (v= varref )* EOL ( singleLine )+ END ( EOL )? )
            // /home/carlos/Proyectos/logojava/Logo.g:32:3: TO f= ID (v= varref )* EOL ( singleLine )+ END ( EOL )?
            {
            root_0 = (Object)adaptor.nil();



            			List<Statement> statements = new ArrayList<Statement>();
            			List<String> variables = new ArrayList<String>();
            		

            TO3=(Token)match(input,TO,FOLLOW_TO_in_function70); 
            TO3_tree = 
            (Object)adaptor.create(TO3)
            ;
            adaptor.addChild(root_0, TO3_tree);


            f=(Token)match(input,ID,FOLLOW_ID_in_function74); 
            f_tree = 
            (Object)adaptor.create(f)
            ;
            adaptor.addChild(root_0, f_tree);


            // /home/carlos/Proyectos/logojava/Logo.g:36:11: (v= varref )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==COLON) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/carlos/Proyectos/logojava/Logo.g:36:13: v= varref
            	    {
            	    pushFollow(FOLLOW_varref_in_function80);
            	    v=varref();

            	    state._fsp--;

            	    adaptor.addChild(root_0, v.getTree());

            	     variables.add((v!=null?v.value:null).getVarName());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            EOL4=(Token)match(input,EOL,FOLLOW_EOL_in_function86); 
            EOL4_tree = 
            (Object)adaptor.create(EOL4)
            ;
            adaptor.addChild(root_0, EOL4_tree);


            // /home/carlos/Proyectos/logojava/Logo.g:37:3: ( singleLine )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0 >= ID && LA3_0 <= IF)||LA3_0==MAKE||LA3_0==REPEAT) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/carlos/Proyectos/logojava/Logo.g:37:4: singleLine
            	    {
            	    pushFollow(FOLLOW_singleLine_in_function91);
            	    singleLine5=singleLine();

            	    state._fsp--;

            	    adaptor.addChild(root_0, singleLine5.getTree());

            	    statements.add((singleLine5!=null?singleLine5.value:null));

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            END6=(Token)match(input,END,FOLLOW_END_in_function99); 
            END6_tree = 
            (Object)adaptor.create(END6)
            ;
            adaptor.addChild(root_0, END6_tree);


             context.addFunction(new UserFunction((f!=null?f.getText():null),variables, statements));

            // /home/carlos/Proyectos/logojava/Logo.g:39:3: ( EOL )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==EOL) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /home/carlos/Proyectos/logojava/Logo.g:39:3: EOL
                    {
                    EOL7=(Token)match(input,EOL,FOLLOW_EOL_in_function105); 
                    EOL7_tree = 
                    (Object)adaptor.create(EOL7)
                    ;
                    adaptor.addChild(root_0, EOL7_tree);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "function"


    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // /home/carlos/Proyectos/logojava/Logo.g:42:1: statement : singleLine ;
    public final LogoParser.statement_return statement() throws RecognitionException {
        LogoParser.statement_return retval = new LogoParser.statement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        LogoParser.singleLine_return singleLine8 =null;



        try {
            // /home/carlos/Proyectos/logojava/Logo.g:43:2: ( singleLine )
            // /home/carlos/Proyectos/logojava/Logo.g:43:4: singleLine
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_singleLine_in_statement118);
            singleLine8=singleLine();

            state._fsp--;

            adaptor.addChild(root_0, singleLine8.getTree());

            (singleLine8!=null?singleLine8.value:null).execute(context);

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class singleLine_return extends ParserRuleReturnScope {
        public Statement value;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "singleLine"
    // /home/carlos/Proyectos/logojava/Logo.g:46:1: singleLine returns [Statement value] :s1= sentence ( ':' s2= sentence )* EOL ;
    public final LogoParser.singleLine_return singleLine() throws RecognitionException {
        LogoParser.singleLine_return retval = new LogoParser.singleLine_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal9=null;
        Token EOL10=null;
        LogoParser.sentence_return s1 =null;

        LogoParser.sentence_return s2 =null;


        Object char_literal9_tree=null;
        Object EOL10_tree=null;

        try {
            // /home/carlos/Proyectos/logojava/Logo.g:47:2: (s1= sentence ( ':' s2= sentence )* EOL )
            // /home/carlos/Proyectos/logojava/Logo.g:48:3: s1= sentence ( ':' s2= sentence )* EOL
            {
            root_0 = (Object)adaptor.nil();


             List<Sentence> sentences = new ArrayList<Sentence>();

            pushFollow(FOLLOW_sentence_in_singleLine145);
            s1=sentence();

            state._fsp--;

            adaptor.addChild(root_0, s1.getTree());

             sentences.add((s1!=null?s1.value:null));

            // /home/carlos/Proyectos/logojava/Logo.g:50:3: ( ':' s2= sentence )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COLON) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /home/carlos/Proyectos/logojava/Logo.g:50:4: ':' s2= sentence
            	    {
            	    char_literal9=(Token)match(input,COLON,FOLLOW_COLON_in_singleLine153); 
            	    char_literal9_tree = 
            	    (Object)adaptor.create(char_literal9)
            	    ;
            	    adaptor.addChild(root_0, char_literal9_tree);


            	    pushFollow(FOLLOW_sentence_in_singleLine157);
            	    s2=sentence();

            	    state._fsp--;

            	    adaptor.addChild(root_0, s2.getTree());

            	     sentences.add((s2!=null?s2.value:null));

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            EOL10=(Token)match(input,EOL,FOLLOW_EOL_in_singleLine168); 
            EOL10_tree = 
            (Object)adaptor.create(EOL10)
            ;
            adaptor.addChild(root_0, EOL10_tree);


             retval.value = new Statement(sentences); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "singleLine"


    public static class sentence_return extends ParserRuleReturnScope {
        public Sentence value;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "sentence"
    // /home/carlos/Proyectos/logojava/Logo.g:54:1: sentence returns [Sentence value] : ( repeat | ifExp | assignment | call );
    public final LogoParser.sentence_return sentence() throws RecognitionException {
        LogoParser.sentence_return retval = new LogoParser.sentence_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        LogoParser.repeat_return repeat11 =null;

        LogoParser.ifExp_return ifExp12 =null;

        LogoParser.assignment_return assignment13 =null;

        LogoParser.call_return call14 =null;



        try {
            // /home/carlos/Proyectos/logojava/Logo.g:55:2: ( repeat | ifExp | assignment | call )
            int alt6=4;
            switch ( input.LA(1) ) {
            case REPEAT:
                {
                alt6=1;
                }
                break;
            case IF:
                {
                alt6=2;
                }
                break;
            case MAKE:
                {
                alt6=3;
                }
                break;
            case ID:
                {
                alt6=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }

            switch (alt6) {
                case 1 :
                    // /home/carlos/Proyectos/logojava/Logo.g:55:4: repeat
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_repeat_in_sentence186);
                    repeat11=repeat();

                    state._fsp--;

                    adaptor.addChild(root_0, repeat11.getTree());

                     retval.value = (repeat11!=null?repeat11.value:null); 

                    }
                    break;
                case 2 :
                    // /home/carlos/Proyectos/logojava/Logo.g:56:4: ifExp
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ifExp_in_sentence195);
                    ifExp12=ifExp();

                    state._fsp--;

                    adaptor.addChild(root_0, ifExp12.getTree());

                     retval.value = (ifExp12!=null?ifExp12.value:null); 

                    }
                    break;
                case 3 :
                    // /home/carlos/Proyectos/logojava/Logo.g:57:4: assignment
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_assignment_in_sentence204);
                    assignment13=assignment();

                    state._fsp--;

                    adaptor.addChild(root_0, assignment13.getTree());

                     retval.value = (assignment13!=null?assignment13.value:null); 

                    }
                    break;
                case 4 :
                    // /home/carlos/Proyectos/logojava/Logo.g:58:4: call
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_call_in_sentence212);
                    call14=call();

                    state._fsp--;

                    adaptor.addChild(root_0, call14.getTree());

                     retval.value = (call14!=null?call14.value:null); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "sentence"


    public static class call_return extends ParserRuleReturnScope {
        public Sentence value;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "call"
    // /home/carlos/Proyectos/logojava/Logo.g:61:1: call returns [Sentence value] : ID ( expression )* ;
    public final LogoParser.call_return call() throws RecognitionException {
        LogoParser.call_return retval = new LogoParser.call_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID15=null;
        LogoParser.expression_return expression16 =null;


        Object ID15_tree=null;

        try {
            // /home/carlos/Proyectos/logojava/Logo.g:62:2: ( ID ( expression )* )
            // /home/carlos/Proyectos/logojava/Logo.g:62:8: ID ( expression )*
            {
            root_0 = (Object)adaptor.nil();


             java.util.List<Expression> arguments = new java.util.ArrayList<Expression>();

            ID15=(Token)match(input,ID,FOLLOW_ID_in_call240); 
            ID15_tree = 
            (Object)adaptor.create(ID15)
            ;
            adaptor.addChild(root_0, ID15_tree);


            // /home/carlos/Proyectos/logojava/Logo.g:63:6: ( expression )*
            loop7:
            do {
                int alt7=2;
                switch ( input.LA(1) ) {
                case COLON:
                    {
                    alt7=1;
                    }
                    break;
                case INT:
                    {
                    alt7=1;
                    }
                    break;
                case FLOAT:
                    {
                    alt7=1;
                    }
                    break;
                case STRING:
                    {
                    alt7=1;
                    }
                    break;
                case 36:
                    {
                    alt7=1;
                    }
                    break;
                case OPEN_PAR:
                    {
                    alt7=1;
                    }
                    break;
                case ID:
                    {
                    alt7=1;
                    }
                    break;

                }

                switch (alt7) {
            	case 1 :
            	    // /home/carlos/Proyectos/logojava/Logo.g:63:7: expression
            	    {
            	    pushFollow(FOLLOW_expression_in_call243);
            	    expression16=expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, expression16.getTree());

            	    arguments.add((expression16!=null?expression16.value:null));

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


             retval.value = new Call((ID15!=null?ID15.getText():null),arguments);

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "call"


    public static class block_return extends ParserRuleReturnScope {
        public Block value;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // /home/carlos/Proyectos/logojava/Logo.g:66:1: block returns [Block value] : OPEN_BR ( EOL )? ( ( COLON v= ID )* ( EOL ) )? s1= sentence ( ( ',' | EOL ) s2= sentence )* ( EOL )? CLOSE_BR ;
    public final LogoParser.block_return block() throws RecognitionException {
        LogoParser.block_return retval = new LogoParser.block_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token v=null;
        Token OPEN_BR17=null;
        Token EOL18=null;
        Token COLON19=null;
        Token EOL20=null;
        Token set21=null;
        Token EOL22=null;
        Token CLOSE_BR23=null;
        LogoParser.sentence_return s1 =null;

        LogoParser.sentence_return s2 =null;


        Object v_tree=null;
        Object OPEN_BR17_tree=null;
        Object EOL18_tree=null;
        Object COLON19_tree=null;
        Object EOL20_tree=null;
        Object set21_tree=null;
        Object EOL22_tree=null;
        Object CLOSE_BR23_tree=null;

        try {
            // /home/carlos/Proyectos/logojava/Logo.g:67:2: ( OPEN_BR ( EOL )? ( ( COLON v= ID )* ( EOL ) )? s1= sentence ( ( ',' | EOL ) s2= sentence )* ( EOL )? CLOSE_BR )
            // /home/carlos/Proyectos/logojava/Logo.g:67:4: OPEN_BR ( EOL )? ( ( COLON v= ID )* ( EOL ) )? s1= sentence ( ( ',' | EOL ) s2= sentence )* ( EOL )? CLOSE_BR
            {
            root_0 = (Object)adaptor.nil();


             
            			List<Sentence> sentences = new ArrayList<Sentence>();
            			List<String> variables = new ArrayList<String>();
            		

            OPEN_BR17=(Token)match(input,OPEN_BR,FOLLOW_OPEN_BR_in_block275); 
            OPEN_BR17_tree = 
            (Object)adaptor.create(OPEN_BR17)
            ;
            adaptor.addChild(root_0, OPEN_BR17_tree);


            // /home/carlos/Proyectos/logojava/Logo.g:71:11: ( EOL )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==EOL) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // /home/carlos/Proyectos/logojava/Logo.g:71:12: EOL
                    {
                    EOL18=(Token)match(input,EOL,FOLLOW_EOL_in_block278); 
                    EOL18_tree = 
                    (Object)adaptor.create(EOL18)
                    ;
                    adaptor.addChild(root_0, EOL18_tree);


                    }
                    break;

            }


            // /home/carlos/Proyectos/logojava/Logo.g:71:18: ( ( COLON v= ID )* ( EOL ) )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==COLON||LA10_0==EOL) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // /home/carlos/Proyectos/logojava/Logo.g:71:19: ( COLON v= ID )* ( EOL )
                    {
                    // /home/carlos/Proyectos/logojava/Logo.g:71:19: ( COLON v= ID )*
                    loop9:
                    do {
                        int alt9=2;
                        int LA9_0 = input.LA(1);

                        if ( (LA9_0==COLON) ) {
                            alt9=1;
                        }


                        switch (alt9) {
                    	case 1 :
                    	    // /home/carlos/Proyectos/logojava/Logo.g:71:20: COLON v= ID
                    	    {
                    	    COLON19=(Token)match(input,COLON,FOLLOW_COLON_in_block284); 
                    	    COLON19_tree = 
                    	    (Object)adaptor.create(COLON19)
                    	    ;
                    	    adaptor.addChild(root_0, COLON19_tree);


                    	    v=(Token)match(input,ID,FOLLOW_ID_in_block288); 
                    	    v_tree = 
                    	    (Object)adaptor.create(v)
                    	    ;
                    	    adaptor.addChild(root_0, v_tree);


                    	    variables.add((v!=null?v.getText():null));

                    	    }
                    	    break;

                    	default :
                    	    break loop9;
                        }
                    } while (true);


                    // /home/carlos/Proyectos/logojava/Logo.g:71:59: ( EOL )
                    // /home/carlos/Proyectos/logojava/Logo.g:71:60: EOL
                    {
                    EOL20=(Token)match(input,EOL,FOLLOW_EOL_in_block295); 
                    EOL20_tree = 
                    (Object)adaptor.create(EOL20)
                    ;
                    adaptor.addChild(root_0, EOL20_tree);


                    }


                    }
                    break;

            }


            pushFollow(FOLLOW_sentence_in_block305);
            s1=sentence();

            state._fsp--;

            adaptor.addChild(root_0, s1.getTree());

            sentences.add((s1!=null?s1.value:null));

            // /home/carlos/Proyectos/logojava/Logo.g:73:3: ( ( ',' | EOL ) s2= sentence )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==EOL) ) {
                    int LA11_1 = input.LA(2);

                    if ( ((LA11_1 >= ID && LA11_1 <= IF)||LA11_1==MAKE||LA11_1==REPEAT) ) {
                        alt11=1;
                    }


                }
                else if ( (LA11_0==COMMA) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // /home/carlos/Proyectos/logojava/Logo.g:73:4: ( ',' | EOL ) s2= sentence
            	    {
            	    set21=(Token)input.LT(1);

            	    if ( input.LA(1)==COMMA||input.LA(1)==EOL ) {
            	        input.consume();
            	        adaptor.addChild(root_0, 
            	        (Object)adaptor.create(set21)
            	        );
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_sentence_in_block321);
            	    s2=sentence();

            	    state._fsp--;

            	    adaptor.addChild(root_0, s2.getTree());

            	    sentences.add((s2!=null?s2.value:null));

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            // /home/carlos/Proyectos/logojava/Logo.g:73:56: ( EOL )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==EOL) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // /home/carlos/Proyectos/logojava/Logo.g:73:57: EOL
                    {
                    EOL22=(Token)match(input,EOL,FOLLOW_EOL_in_block328); 
                    EOL22_tree = 
                    (Object)adaptor.create(EOL22)
                    ;
                    adaptor.addChild(root_0, EOL22_tree);


                    }
                    break;

            }


            CLOSE_BR23=(Token)match(input,CLOSE_BR,FOLLOW_CLOSE_BR_in_block335); 
            CLOSE_BR23_tree = 
            (Object)adaptor.create(CLOSE_BR23)
            ;
            adaptor.addChild(root_0, CLOSE_BR23_tree);


             retval.value = new Block(variables,sentences); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
